tests/expectations/compiler/finalize/finalize_with_return.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372106]: An async function is not allowed to return a value.
    --> compiler-test:11:5
     |
  11 |     async function finalize_mint_public (public receiver: address, public amount: u64) -> u64 {
  12 |         Mapping::set(account, receiver, amount);
  13 |         return amount;
  14 |     }
     |     ^
     |
     = Remove an output type in the function signature, and remove the return statement from the function. Note that the future returned by async functions is automatically inferred, and must not be explicitly written.
Error [ETYC0372106]: An async function is not allowed to return a value.
    --> compiler-test:18:7
     |
  18 |     } async function finalize_public_adder(a: u8, b: u8) -> public u8 {
  19 |         return a + b;
  20 |     }
     |      ^
     |
     = Remove an output type in the function signature, and remove the return statement from the function. Note that the future returned by async functions is automatically inferred, and must not be explicitly written.
"""]
